--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
 
         <div class="nav-right">
-            <a href="#" class="nav-btn">Register</a>
+            <a href="https://shohan555.github.io/Login-Form/" class="nav-btn">Register</a>
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
